--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -15,7 +15,8 @@
   "nativeAllowList": [
     "app.*",
     "os.*",
-    "debug.log"
+    "debug.log",
+    "filesystem.*"
   ],
   "globalVariables": {
     "TEST1": "Hello",
@@ -51,14 +52,15 @@
       "globalVariables": {
         "TEST": "Test value browser"
       },
-      "nativeBlockList": [
-        "filesystem.*"
-      ]
+      "nativeBlockList": []
     },
     "cloud": {
       "url": "/resources/#cloud",
       "nativeAllowList": [
-        "app.*"
+        "app.*",
+        "os.*",
+        "debug.log",
+        "filesystem.*"
       ]
     },
     "chrome": {
@@ -66,8 +68,6 @@
       "height": 768,
       "args": "--user-agent=\"Neutralinojs chrome mode\"",
       "nativeBlockList": [
-        "filesystem.*",
-        "os.*"
       ]
     }
   },
@@ -78,5 +78,12 @@
     "clientLibrary": "/resources/js/neutralino.js",
     "binaryVersion": "6.2.0",
     "clientVersion": "6.2.0"
+  },
+  "permissions": {
+    "filesystem": {
+      "readFile": true,
+      "writeFile": true,
+      "readDirectory": true
+    }
   }
 }
