--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -77,7 +77,13 @@
     "extensionsPath": "/extensions/",
     "clientLibrary": "/resources/js/neutralino.js",
     "binaryVersion": "6.2.0",
-    "clientVersion": "6.2.0"
+    "clientVersion": "6.2.0",
+    "nativeFilesystem": {
+        "enabled": true,
+        "allowedPaths": [
+            "C:/Users/%userprofile%/Documents/BCULMS/data"
+        ]
+    }
   },
   "permissions": {
     "filesystem": {
