--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://raw.githubusercontent.com/neutralinojs/neutralinojs/main/schemas/neutralino.config.schema.json",
   "applicationId": "js.neutralino.sample",
-  "version": "1.0.0",
+  "version": "0.1.0-beta",
   "defaultMode": "window",
   "documentRoot": "/resources/",
   "url": "/html/index.html",
